--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">Teste de DevOps na 4Linux - Valter Ferreira.</div>
+	<div class="alert">Teste de DevOps na 4Linux - <b>Valter Ferreira</b></div>
 	
 	<div class="container">
 		<div class="logo">
